--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,6 +23,13 @@ REDIS_URL=redis://127.0.0.1:6379
 
 # RPC Configuration
 RPC_MOCK_MODE=false
+# Retry and circuit breaker (optional; defaults shown)
+# RPC_MAX_RETRIES=3
+# RPC_INITIAL_BACKOFF_MS=100
+# RPC_MAX_BACKOFF_MS=5000
+# RPC_CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
+# RPC_CIRCUIT_BREAKER_SUCCESS_THRESHOLD=2
+# RPC_CIRCUIT_BREAKER_TIMEOUT_SECONDS=30
 
 # Database Connection Pool Configuration
 DB_POOL_MAX_CONNECTIONS=10
