--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -45,7 +45,7 @@ dotenvy = "0.15"
 sha2 = "0.10"
 hex = "0.4"
 toml = "0.8"
-sprometheus = "0.13"
+prometheus = "0.13"
 md5 = "0.7"
 ipnetwork = "0.20"
 
